HelloUltraviolet/Fixtures/RejectedSource/FFI/HostExportMoveContext/Expected.uv
//! Expected diagnostic metadata for the HostExportMoveContext rejected-source specimen.

expectedDiagnostic("E-TYP-2633", "rule.23.HostExport-Context-Move-Err")
